// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checks invokations Checks for just name without arguments 1`] = `
"[2mexpect([22m[31mdispatch[39m[2m).not.toBeCalledWithActionCreator([22m[32mac1[39m[2m)[22m

Expected dispatch() [32m\\"to not call\\"[39m action creator [32m\\"ac1\\"[39m

  [31mBut it was called it[39m"
`;

exports[`Checks invokations Checks for just name without arguments 2`] = `
"[2mexpect([22m[31mdispatch[39m[2m).toBeCalledWithActionCreator([22m[32mac2[39m[2m)[22m

Expected dispatch() [32m\\"to call\\"[39m action creator [32m\\"ac2\\"[39m

  [31mBut it never called it.[39m"
`;

exports[`Checks invokations Checks for name with arguments 1`] = `
"[2mexpect([22m[31mdispatch[39m[2m).toBeCalledWithActionCreator([22m[32mac1[39m[2m)[22m

Expected dispatch() [32m\\"to call\\"[39m action creator [32m\\"ac1\\"[39m
  With arguments: [32m[\\"e\\", \\"k\\", false][39m

  [31mBut it was called it with arguments: [\\"a\\", \\"b\\", true][39m

Difference

[32m- Expected[39m
[31m+ Received[39m

[2m  Array [[22m
[32m-   \\"e\\",[39m
[32m-   \\"k\\",[39m
[32m-   false,[39m
[31m+   \\"a\\",[39m
[31m+   \\"b\\",[39m
[31m+   true,[39m
[2m  ][22m"
`;

exports[`Checks invokations Checks for name with arguments 2`] = `
"[2mexpect([22m[31mdispatch[39m[2m).toBeCalledWithActionCreator([22m[32mac2[39m[2m)[22m

Expected dispatch() [32m\\"to call\\"[39m action creator [32m\\"ac2\\"[39m
  With arguments: [32m[\\"a\\", \\"b\\", true][39m

  [31mBut it never called it.[39m"
`;

exports[`Throws if action creator name is not a string or function 1`] = `
"[2mexpect([22m[31mdispatch[39m[2m)[.not].toBeCalledWithActionCreator([22m[32mactionCreator[39m[2m)[22m

[32mactionCreator[39m must be a string or function.
Received: [31m\\"boolean\\"[39m"
`;

exports[`Throws if action creator name is not a string or function 2`] = `
"[2mexpect([22m[31mdispatch[39m[2m)[.not].toBeCalledWithActionCreator([22m[32mactionCreator[39m[2m)[22m

[32mactionCreator[39m must be a string or function.
Received: [31m\\"object\\"[39m"
`;

exports[`Throws if calling with non mocked dispatch 1`] = `
"[2mexpect([22m[31mdispatch[39m[2m)[.not].toBeCalledWithActionCreator([22m[2m)[22m

[31mdispatch[39m value must be a mock function or spy.
Received:
  function: [31m[Function f][39m"
`;
